# ignis

./: .gitignore  1  Cargo.toml  README.md  à
.github/workflows/: ci.yml
crates/ignis/: Cargo.toml
crates/ignis-codegen/: Cargo.toml
crates/ignis-codegen/src/: codegen.rs  lib.rs  metal.rs
crates/ignis-common/: Cargo.toml
crates/ignis-common/src/: tensor.rs
crates/ignis-core/: Cargo.toml
crates/ignis-ir/: Cargo.toml
crates/ignis-ir/src/: expr.rs  kernel.rs  lib.rs  memory.rs  ops.rs  stmt.rs  type_sys.rs
crates/ignis-macro/: Cargo.toml
crates/ignis-macro/src/: builtins.rs  context.rs  error.rs  expr.rs  kernel.rs  lib.rs  lowering.rs  memory.rs  ops.rs  parser.rs  stmt.rs  to_token_impl.rs  type_sys.rs
crates/ignis-metal/: Cargo.toml
crates/ignis-metal/src/: lib.rs
crates/ignis-ops/: Cargo.toml
crates/ignis-ops/src/: lib.rs
crates/ignis-runtime/: Cargo.toml
crates/ignis-runtime/src/: lib.rs
crates/ignis/src/: lib.rs
