

[workspace.package]
version = "1.0.0"
authors = ["Mathieu Thibeault-Thuot"]
description = "A blazingly fast, educational-first deep learning framework for students and researchers"
documentation = "https://ignis.veemdigital.com"
repository = "https://github.com/veemdigital/ignis"
categories = ["science"]

[workspace]
resolver = "3"
members = [ "crates/ignis",
  "crates/ignis-codegen",
  "crates/ignis-common",
  "crates/ignis-core",
  "crates/ignis-ir",
  "crates/ignis-macro",
  "crates/ignis-metal",
  "crates/ignis-runtime",
]

[workspace.dependencies]
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.12"
pyo3 = "0.25.1"
